== Changelog

=== 1.9.0 (released 07.07.2024)
* Add soft assertions for AssertJ

=== 1.8.1 (released 17.02.2023)
* Add matcher `matchesText(regex)`

=== 1.8.0 (released 22.12.2022)
* pdfbox from 2.0.24 to 2.0.27
* bump hamcrest from 1.3 to 2.2
* bump assertj from 3.21.0 to 3.23.1

=== 1.7.0 (released 01.11.2021)
* add support for multiple texts  --  thanks to Vitali Plagov for PR #10

=== 1.6.1 (released 26.02.2021)
* added AssertJ matchers

=== 1.6.0 (released 21.01.2021)
* #4 add methods to search within given pages of PDF
* added method doesNotContainText() and doesNotContainExactText
* upgraded to pdfbox 2.0.22 and AssertJ 3.18.1

=== 1.5.2 (released 15.07.2020)
* upgraded to pdfbox 2.0.20 and JUnit 4.13

=== 1.5.1 (released 27.11.2018)
* upgraded to pdfbox 2.0.12

=== 1.5.0 (released 04.06.2018)
* upgraded to pdfbox 2.0.9
* upgraded to Java 8

=== 1.4 (released 02.04.2016)
* upgraded to pdfbox 2.0.0
* change license to less restrictive MIT
* add fields PDF for checking signed PDFs: signed, signerName, signatureTime.

=== 1.3 (Released 12.08.2015)
* upgrade to pdfbox 1.8.10
* simplify API: all public methods are in class PDF

=== 1.2 (Released 28.06.2015)
* Add matcher `containsTextCaseInsensitive()`

=== 1.1 (Released 25.06.2015)
* Method `containsText()` now ignores whitespaces and linebreaks
* Add matcher `containsExactText()`

=== 1.0 (Released 25.06.2015)
* First version with the only function `assertThat(pdf, containsText("#50quickideas"));`
* using to pdfbox 1.8.9
* using license LGPL 3