@@ -1,6 +1,6 @@
 package com.codeborne.pdftest;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 
