@@ -1,7 +1,7 @@
 package com.codeborne.pdftest.assertj;
 
 import com.codeborne.pdftest.PDF;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 
