@@ -1,7 +1,7 @@
 package com.codeborne.pdftest.matchers;
 
 import com.codeborne.pdftest.PDF;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
 
@@ -9,7 +9,7 @@ import static com.codeborne.pdftest.PDF.containsExactText;
 import static org.hamcrest.CoreMatchers.not;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.fail;
 
 public class ContainsExactTextTest {
   @Test
@@ -41,7 +41,7 @@ public class ContainsExactTextTest {
       fail("expected AssertionError");
     }
     catch (AssertionError expected) {
-      assertThat(expected.getMessage(), 
+      assertThat(expected.getMessage(),
           is("\nExpected: a PDF containing \"Goodbye word\"\n     but: was \"Hello World\n\""));
     }
   }
