@@ -2,6 +2,7 @@
 
 === 1.9.0 (released 07.07.2024)
 * Add soft assertions for AssertJ
+* Rewrite tests from JUnit4 to JUnit5
 
 === 1.8.1 (released 17.02.2023)
 * Add matcher `matchesText(regex)`
